# OpenQR

./: .gitignore  Makefile  OpenQR.spec  README.md  app.py  bun.lockb  constants.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  version.txt  version.txt.template  vite.config.ts
.githooks/: pre-push
.github/workflows/: build.yml  release.yml
assets/: Info.plist.in  openqr_icon.icns
openqr/: app.py  constants.py
openqr/cli/: app.py  listener.py
openqr/core/: generator.py  keyboard_scanner_event_filter.py  listener.py  scanner.py
openqr/generator/: generator.py
openqr/qt/: app.py  constants.py
openqr/scanner/: listener.py  scanner_event_filter.py
openqr/utils/: functions.py  logger.py  printer.py
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: config.rs  history.rs  mod.rs  scan.rs  url.rs
src-tauri/src/models/: config.rs  scan.rs
src/components/: Footer.tsx  Generator.tsx  Header.tsx  ListSection.tsx  Scanner.tsx  Settings.tsx  types.tsx
src/components/__tests__/: Generator.test.tsx  Header.test.tsx  Scanner.test.tsx  Settings.test.tsx
src/components/footer/: footer.tsx
src/components/header/: header.tsx
src/components/qr_code_generator/: generator.tsx
src/components/url_reader/: reader.tsx
tests/: test_app.py  test_listener.py  test_main.py
tests/cli/: test_app.py  test_listener.py
tests/core/: test_generator.py  test_generator_edge_cases.py  test_keyboard_scanner_event_filter.py  test_listener.py  test_listener_edge_cases.py  test_scanner.py
tests/generator/: test_generator.py
tests/integration/: test_workflows.py
tests/qt/: test_app.py  test_constants.py
tests/scanner/: test_listener.py
tests/utils/: test_logger.py  test_printer.py
tools/: convert_icon.py  generate_version_file.py
