[project]
name = "openqr"
version = "0.1.1"
description = "QR Code Listener & URL Opener"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.4",
    "click==8.2.1",
    "iniconfig==2.1.0",
    "keyboard==0.13.5",
    "macholib==1.16.3",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "packaging==25.0",
    "pathvalidate==3.3.1",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyqt6==6.9.1",
    "pyqt6-qt6==6.9.1",
    "pyqt6-sip==13.10.2",
    "pytest==8.4.1",
    "pytest-qt==4.5.0",
    "pyzbar==0.1.9",
    "qrcode==8.2",
    "rich==14.1.0",
    "ruff==0.12.7",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "validators==0.35.0",
]
